[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'todd_ai'
version = '0.2.4a3'
description = 'Toolkit for Object Detection Distillation'
readme = 'README.md'
requires-python = '>=3.6'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
]
dependencies = [
    'addict',
    'einops',
    'lmdb',
    'opencv-python',
    'pandas',
    'timm',
    'toml',
    'tqdm',
    'typing_extensions',
    'yapf',
]

[project.license]
file = 'LICENSE'

[[project.authors]]
name = 'Luting Wang'
email = 'wangluting@buaa.edu.cn'

[project.urls]
Homepage = 'https://github.com/LutingWang/todd'
Documentation = 'https://toddai.readthedocs.io/en/latest/'

[project.optional-dependencies]
dev = [
    'commitizen',
    'ipdb',
    'tensorboard',
    'torch-tb-profiler',
]
doc = [
    'mmcv',
    'python-docs-theme',
    'sphinx',
    'sphinx_rtd_theme',
]
pre-commit = [
    'codespell',
    'docformatter[tomli]',
    'flake8',
    'isort',
    'mypy',
    'pre-commit',
]
test = [
    'coverage',
    'mmcv',
    'pytest',
]

[project.scripts]
configs_diff = 'todd.base.configs:diff_cli'

[tool.setuptools.packages.find]
include = [
    'todd*',
]

[tool.yapf]
allow_split_before_dict_value = false
coalesce_brackets = true
dedent_closing_brackets = true
split_arguments_when_comma_terminated = true
split_complex_comprehension = true
split_before_arithmetic_operator = true

[tool.isort]
profile = 'hug'
src_paths = [
    'tests',
    'todd',
]
line_length = 79
multi_line_output = 3

[tool.pydocstyle]
convention = 'google'

[tool.mypy]
files = [
    'tests',
    'todd',
]

[[tool.mypy.overrides]]
module = [
    'PIL.*',
    'addict.*',
    'cv2.*',
    'einops.*',
    'lmdb.*',
    'mmcv.*',
    'pandas.*',
    'pkg_resources.*',
    'setuptools.*',
    'timm.*',
    'toml.*',
    'torchvision.*',
    'yapf.*',
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    'todd.base._patches.*',
]
ignore_errors = true

[tool.pytest.ini_options]
norecursedirs = 'tests/helpers'
filterwarnings = [
    'ignore:lib2to3 package is deprecated and may not be able to parse Python 3.10+:PendingDeprecationWarning',
]
testpaths = 'tests todd'
addopts = '--doctest-modules'

[tool.coverage.run]
branch = true
command_line = '-m pytest'
source = [
    'todd',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',

    'def __repr__',
    'def \w+_cli\(\)',

    'raise AssertionError',
    'raise NotImplementedError',

    'if __name__ == .__main__.:',

    'class .*\(.*\bProtocol\b.*\):',
    '@(abc\.)?abstractmethod',
    '@overload',
]

[tool.commitizen]
name = 'cz_conventional_commits'
version = "0.2.4a3"
tag_format = 'v$version'
version_files = [
    'pyproject.toml:^version',
    'docs/source/conf.py:^release',
    'CITATION.cff:^version',
]
